@@ -1,3 +1,8 @@
+2018-09-11  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/86830
+	* gfortran.dg/typebound_call_30.f90: New test case.
+
 2018-09-10  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/85395
