@@ -1,3 +1,9 @@
+2018-09-11  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/86830
+	* expr.c (gfc_is_simply_contiguous): Handle type-bound procedure calls
+	with non-polymorphic objects.
+
 2018-09-10  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/85395
